# mock-database-dev

./: .gitignore  CMakeLists.txt  readme.md
example/data/: config.json
example/data/client/: basic_query.sql  db.json  query.sql
example/data/server/: db.json
lib/antlr/src/parser/: mysql.interp  mysql.tokens  mysqlBaseVisitor.cpp  mysqlBaseVisitor.h  mysqlLexer.cpp  mysqlLexer.h  mysqlLexer.interp  mysqlParser.cpp  mysqlParser.h  mysqlVisitor.cpp  mysqlVisitor.h
src/: client.cpp  client.h  data_maker.cpp  database.cpp  database.h  main.cpp  provider.cpp  provider.h
src/parser/: mysql.g4  mysqlLexer.tokens
